# timespec

./: .gitignore  CMakeLists.txt  conanfile.py  timespecCPack.cmake
src/: CMakeLists.txt  timespec.c
test/: CMakeLists.txt  timespecTests.c
test_package/: CMakeLists.txt  conanfile.py  timespecTestConan.c
